examples/errors/parsing/listlength-sort-no-eq.rcn
sort Lst(a) { Nil : () | Cons : (a * Lst(a)) }
main : () [impure] = ()
